--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -8,3 +8,12 @@ Style/StringLiteralsInInterpolation:
 
 Layout/LineLength:
   Max: 120
+
+Metrics/BlockLength:
+  Max: 100
+
+Metrics/AbcSize:
+  Max: 18
+
+AllCops:
+  TargetRubyVersion: 3.0
