--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+rutie = { version = "0.8.4" }
+
+[lib]
+name = "rustby"
+path = "rust/lib.rs"
+crate-type = ["cdylib"]
